WebP: fix colorspace export issue when dithering is enabled

BUG: 491231